fix breaking parts on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -429,21 +429,26 @@ footer p {
     padding: 2rem 2rem 2rem 0.6rem;
     margin: 0 auto;
     margin-top: 1rem;
-    width: 80%;
+    width: 90%;
   }
   main .showcase .search-area .search-form .search-bar {
+    padding: 0.5rem 4rem;
     width: 80%;
   }
   main .showcase .search-area .search-form .search-btn {
     padding: 0.5rem 0.4rem;
   }
   main .bottom .bottom-nav .bottom-nav-links {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  main .bottom .bottom-nav .bottom-nav-links .bottom-link {
-    margin-right: 1.3rem;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    height: 50px;
     font-size: 0.9rem;
   }
   main .bottom .bottom-content {
@@ -452,6 +457,10 @@ footer p {
   }
   main .bottom .bottom-content > * {
     margin-bottom: 1.5rem;
+  }
+  main .detailed-content .detail-image {
+    width: 100px;
+    height: 100px;
   }
   footer {
     -webkit-box-orient: vertical;
@@ -466,6 +475,9 @@ footer p {
   footer .social-links {
     width: 30%;
     margin-bottom: 1rem;
+  }
+  footer p span {
+    display: block;
   }
 }
 
